# hgrep

./: AGENTS.md  README.md  pyproject.toml
docs/plans/: 2026-05-30-hgrep.md
docs/specs/: 2026-05-30-hgrep-design.md
hgrep/: cli.py  index.py  record.py  registry.py  search.py
hgrep/harness/: base.py  claude_code.py  pi.py
lib/: hgrep.zsh
skills/recall/: SKILL.md
tests/: test_base.py  test_claude_adapter.py  test_cli.py  test_index.py  test_pi_adapter.py  test_record.py  test_registry.py  test_search.py
tests/fixtures/claude/-tmp-bar/: 22222222-2222-2222-2222-222222222222.jsonl
tests/fixtures/claude/-tmp-proj/: 11111111-1111-1111-1111-111111111111.jsonl
tests/fixtures/pi/--tmp-proj2--/: 2026-05-02T08-00-00-000Z_33333333-3333-3333-3333-333333333333.jsonl
tests/fixtures/pi/--tmp-proj3--/: 2026-05-03T08-00-00-000Z_44444444-4444-4444-4444-444444444444.jsonl
